# DistributedCharge

./: .gitignore  .gitmodules  CHANGES.md  GUI-test  Launcher-SmartLoads  Launcher-car  Launcher-grid-buyer  Launcher-grid-seller  Launcher-wall  README.md  RateFunctions.py  ReadRates.py  SmartLoads.py  SocketHelpers.py  canup  car  car.py  common.py  grid-buyer.py  grid-seller.py  helpers2.py  lnd-grpc-test  m3.py  nfc-test  setup.cfg  wall  wall.py
.github/workflows/: build-image.yml  cm4-image.pkr.hcl
GUI/: __init__.py
SampleConfig/: Config.yaml  RateFile.yaml  SmartLoads.yaml  dc.config  notes.txt
dc/: GUI.py  NFC.py  RateFunctions.py  ReadRates.py  __init__.py  common.py  m3.py
docs/: CarSystemSetup.md  SystemSetup.md
