[metadata]
name = dc
version = 0.14

[options]
packages = find:

scripts =
  car
  wall.py
  grid-buyer.py
  grid-seller.py
  lnd-grpc-test
  dc-ctl
  GUI-test

install_requires =
  cantools
  can-isotp
  pillow
  qrcode
  pydbus
  pystemd
  pyroute2
  kmodule
  gpiozero
  RPi.GPIO
  mcp3008
  helpers2 @git+https://github.com/AndySchroder/helpers2.git
  lnd-grpc-client @git+https://github.com/AndySchroder/lnd-grpc-client.git


[options.package_data]
dc=model3dbc/Model3CAN.dbc

