[metadata]
name = dc
version = 0.16

[options]
packages = find:

scripts =
  car
  wall
  grid-buyer.py
  grid-seller.py
  lnd-grpc-test
  GUI-test

install_requires =
  cantools
  can-isotp
  pillow
  qrcode
  pydbus
  pystemd
  pyroute2
  kmodule
  gpiozero
  RPi.GPIO
  mcp3008
  helpers2 @git+https://github.com/AndySchroder/helpers2.git
  lnd-grpc-client @git+https://github.com/AndySchroder/lnd-grpc-client.git

  # recently the latest version of bolt11 does not work, so anchor to a known good commit
  bolt11 @ git+https://github.com/lnbits/bolt11.git@540b4062dda01ff2338ef6cd3ab28957dba71880


[options.package_data]
dc=model3dbc/Model3CAN.dbc

